--- a/memory-cards/package.json
+++ b/memory-cards/package.json
@@ -7,9 +7,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
+    "react-countdown-circle-timer": "^3.2.1",
+    "react-countdown-now": "^2.1.2",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "react-timer-hook": "^3.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
